# aws-s3-transfer-manager-rs

./: .cargo-deny-config.toml  .gitignore  CHANGELOG.md  CHANGELOG.rst  CODEOWNERS  Cargo.toml  README.md  new_release.sh
.cargo/: config.toml
.changelog/: release_v0.1.0.md
.github/workflows/: audit.yml  ci.yml  release.yml
aws-s3-transfer-manager/: Cargo.toml  external-types.toml
aws-s3-transfer-manager/examples/: cp.rs
aws-s3-transfer-manager/src/: client.rs  config.rs  download.rs  error.rs  http.rs  lib.rs  metrics.rs  middleware.rs  operation.rs  runtime.rs  types.rs  upload.rs
aws-s3-transfer-manager/src/client/: downloader.rs  uploader.rs
aws-s3-transfer-manager/src/client/downloader/: body.rs  context.rs  discovery.rs  handle.rs  worker.rs
aws-s3-transfer-manager/src/client/uploader/: context.rs  handle.rs
aws-s3-transfer-manager/src/config/: loader.rs
aws-s3-transfer-manager/src/download/: body.rs  discovery.rs
aws-s3-transfer-manager/src/http/: header.rs
aws-s3-transfer-manager/src/io/: adapters.rs  aggregated_bytes.rs  buffer.rs  mod.rs  part_reader.rs  path_body.rs  size_hint.rs  stream.rs
aws-s3-transfer-manager/src/middleware/: hedge.rs  limit.rs  retry.rs
aws-s3-transfer-manager/src/middleware/limit/: concurrency.rs  estimated_throughput.rs
aws-s3-transfer-manager/src/middleware/limit/concurrency/: estimated_throughput.rs  future.rs  layer.rs  service.rs
aws-s3-transfer-manager/src/middleware/limit/estimated_throughput/: future.rs  layer.rs  service.rs  state.rs
aws-s3-transfer-manager/src/operation/: download.rs  download_objects.rs  upload.rs  upload_objects.rs
aws-s3-transfer-manager/src/operation/download/: body.rs  builders.rs  checksum.rs  checksums.rs  chunk_meta.rs  context.rs  discovery.rs  handle.rs  input.rs  object_meta.rs  output.rs  service.rs  trailing_meta.rs  worker.rs
aws-s3-transfer-manager/src/operation/download_objects/: builders.rs  handle.rs  input.rs  list_objects.rs  output.rs  worker.rs
aws-s3-transfer-manager/src/operation/upload/: builders.rs  checksum_strategy.md  checksum_strategy.rs  checksum_strategy_builder.md  context.rs  handle.rs  input.rs  output.rs  service.rs
aws-s3-transfer-manager/src/operation/upload_objects/: builders.rs  handle.rs  input.rs  output.rs  worker.rs
aws-s3-transfer-manager/src/runtime/: scheduler.rs  token_bucket.rs
aws-s3-transfer-manager/src/upload/: handle.rs  request.rs
aws-s3-transfer-manager/test-common/: Cargo.toml
aws-s3-transfer-manager/test-common/src/: lib.rs
aws-s3-transfer-manager/tests/: download_objects_test.rs  download_test.rs  e2e_transfer_test.rs  test_utils.rs  upload_checksum_test.rs  upload_objects_test.rs  upload_test.rs
aws-sdk-s3-transfer-manager/: Cargo.toml  README.md  external-types.toml
aws-sdk-s3-transfer-manager/examples/: cp.rs
aws-sdk-s3-transfer-manager/src/: client.rs  error.rs  http.rs  lib.rs  metrics.rs  middleware.rs  types.rs
aws-sdk-s3-transfer-manager/src/config/: loader.rs
aws-sdk-s3-transfer-manager/src/http/: header.rs
aws-sdk-s3-transfer-manager/src/io/: adapters.rs  aggregated_bytes.rs  error.rs  part_reader.rs  path_body.rs  stream.rs
aws-sdk-s3-transfer-manager/src/metrics/: aggregators.rs  instruments.rs  unit.rs
aws-sdk-s3-transfer-manager/src/middleware/: hedge.rs
aws-sdk-s3-transfer-manager/src/middleware/limit/: concurrency.rs
aws-sdk-s3-transfer-manager/src/middleware/limit/concurrency/: future.rs  service.rs
aws-sdk-s3-transfer-manager/src/operation/: download.rs  download_objects.rs  upload.rs  upload_objects.rs
aws-sdk-s3-transfer-manager/src/operation/download/: body.rs  builders.rs  chunk_meta.rs  discovery.rs  handle.rs  input.rs  retry.rs  service.rs  tokio_metrics.rs
aws-sdk-s3-transfer-manager/src/operation/download_objects/: list_objects.rs  worker.rs
aws-sdk-s3-transfer-manager/src/operation/upload/: builders.rs  checksum_strategy.md  context.rs  handle.rs  input.rs  output.rs  service.rs
aws-sdk-s3-transfer-manager/src/operation/upload/input/: convert.rs
aws-sdk-s3-transfer-manager/src/operation/upload_objects/: input.rs  worker.rs
aws-sdk-s3-transfer-manager/src/runtime/: scheduler.rs  token_bucket.rs
aws-sdk-s3-transfer-manager/test-common/: Cargo.toml
aws-sdk-s3-transfer-manager/test-common/src/: lib.rs
aws-sdk-s3-transfer-manager/tests/: download_objects_test.rs  download_test.rs  e2e_transfer_test.rs  upload_checksum_test.rs  upload_objects_test.rs  upload_test.rs
benches/: Cargo.toml  throughput.rs
s3-mock-server/: Cargo.toml  README.md
s3-mock-server/src/: error.rs  lib.rs  s3_impl.rs  s3s.rs  server.rs  storage.rs  streaming.rs  types.rs
s3-mock-server/src/storage/: filesystem.rs  in_memory.rs  models.rs  tests.rs
s3-mock-server/tests/: checksums.rs  operations.rs
