[package]
name = "s3-mock-server"
version = "0.1.0"
edition = "2021"
authors = ["AWS Rust SDK Team <aws-sdk-rust@amazon.com>"]
license = "Apache-2.0"
publish = false
description = "A mock S3 server for testing and benchmarking the AWS S3 Transfer Manager"

[dependencies]
async-trait = "0.1.83"
bytes = "1"
s3s = "0.11.0"
s3s-aws = "0.11.0"
thiserror = "2"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "io-util", "sync", "fs", "macros"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.12.0"
tokio-test = "0.4.4"
