[package]
name = "s3-mock-server"
version = "0.1.0"
edition = "2021"
authors = ["AWS Rust SDK Team <aws-sdk-rust@amazon.com>"]
license = "Apache-2.0"
publish = false
description = "A mock S3 server for testing and benchmarking the AWS S3 Transfer Manager"

[dependencies]
async-trait = "0.1.83"
aws-config = "1.6.3"
aws-sdk-s3 = "1.86.0"
bytes = "1"
futures-util = "0.3.31"
hyper-util = {  version = "0.1.13", features = ["server-graceful", "server-auto", "server", "http1", "http2", "tokio"]}
md5 = "0.7.0"
s3s = { version = "0.11.0", features = ["tower"] }
thiserror = "2"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.12.0"
tracing-subscriber = "0.3.19"
