[package]
name = "test-common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
aws-sdk-s3 = { version = "1.51.0", features = ["behavior-version-latest", "test-util"] }
aws-smithy-mocks-experimental = "0.2.1"
http-02x = { package = "http", version = "0.2.9" }
tempfile = "3.12.0"