[package]
name = "test-common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
aws-smithy-mocks-experimental = "0.2.1"
http-02x = { package = "http", version = "0.2.9" }
tempfile = "3.12.0"
bytes = "1.9.0"
aws-sdk-s3-transfer-manager = { path = "../../aws-sdk-s3-transfer-manager", version = "0.1.0" }
uuid = { version = "1.11.0", features = ["v4"] }
